Fixed contrast in dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,6 +2,9 @@
     background-color: #eff6ff;
     padding: 1rem;
 }
+.dark-mode-input {
+    color: black;
+}
 
 
 #hero {
